--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,43 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.pokemon-list {
+  align-items: center;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.pokemon-card {
+  display: inline-block;
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  border-radius: 8px;
   text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  overflow: hidden;
+  max-width: 100%;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.pokemon-card img {
+  width: 130px;
+  height: 130px;
+  margin: 10px;
+  margin-bottom: 0px;
+  padding: 15px;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pokemon-card__details {
+  margin: 15px;
+  margin-top: 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.pokemon-card__name {
+  text-transform: uppercase;
+  font-weight: bold;
+  margin: 0px;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.pokemon-card__data {
+  margin: 0px;
 }
